IKASAN-2318 support for JDK17