@@ -67,7 +67,7 @@ public class EntityAgeFilterEntryConverter implements FilterEntryConverter<Strin
             Date date =  df.parse(entityLastUpdated);
 
             result = new DefaultFilterEntry(entityIdentifier.hashCode(),
-                    this.clientId, new Long(date.getTime()).toString(), timeToLive);
+                    this.clientId, Long.valueOf(date.getTime()).toString(), timeToLive);
         }
         catch (Exception e)
         {
