@@ -388,7 +388,7 @@ public class LdapServiceImpl implements LdapService
 
                 if(!isValidEncoding(ldapUser))
                 {
-                    logger.warn(String.format("User[%s] contains an unsupported character encoding, skipping.", ldapUser));
+                    logger.warn("User[%s] contains an unsupported character encoding, skipping.".formatted(ldapUser));
                     continue;
                 }
 
@@ -473,7 +473,7 @@ public class LdapServiceImpl implements LdapService
             }
             catch (Exception e)
             {
-                logger.warn(String.format("An error has occurred attempting to synchronise user[%s] , with error message[%s]", ldapUser, e.getMessage()), e);
+                logger.warn("An error has occurred attempting to synchronise user[%s] , with error message[%s]".formatted(ldapUser, e.getMessage()), e);
             }
 		}
 	}
@@ -481,39 +481,39 @@ public class LdapServiceImpl implements LdapService
     protected boolean isValidEncoding(LdapUser ldapUser){
 
         if(ldapUser.accountName != null && !VALID_CHARSET_ENCODER.canEncode(ldapUser.accountName)){
-            logger.warn(String.format("User[%s] has character encoding issue for accountName='%s'", ldapUser.accountName, ldapUser.accountName));
+            logger.warn("User[%s] has character encoding issue for accountName='%s'".formatted(ldapUser.accountName, ldapUser.accountName));
             return false;
         }
 
         if(ldapUser.firstName != null && !VALID_CHARSET_ENCODER.canEncode(ldapUser.firstName)){
-            logger.warn(String.format("User[%s] has character encoding issue for firstName='%s'", ldapUser.accountName, ldapUser.firstName));
+            logger.warn("User[%s] has character encoding issue for firstName='%s'".formatted(ldapUser.accountName, ldapUser.firstName));
             return false;
         }
 
         if(ldapUser.surname != null && !VALID_CHARSET_ENCODER.canEncode(ldapUser.surname)){
-            logger.warn(String.format("User[%s] has character encoding issue for surname='%s'", ldapUser.accountName, ldapUser.surname));
+            logger.warn("User[%s] has character encoding issue for surname='%s'".formatted(ldapUser.accountName, ldapUser.surname));
             return false;
         }
 
         if(ldapUser.email != null && !VALID_CHARSET_ENCODER.canEncode(ldapUser.email)){
-            logger.warn(String.format("User[%s] has character encoding issue for email='%s'", ldapUser.accountName, ldapUser.email));
+            logger.warn("User[%s] has character encoding issue for email='%s'".formatted(ldapUser.accountName, ldapUser.email));
             return false;
         }
 
         if(ldapUser.description != null && !VALID_CHARSET_ENCODER.canEncode(ldapUser.description)){
-            logger.warn(String.format("User[%s] has character encoding issue for description='%s'", ldapUser.accountName, ldapUser.description));
+            logger.warn("User[%s] has character encoding issue for description='%s'".formatted(ldapUser.accountName, ldapUser.description));
             return false;
         }
 
         if(ldapUser.department != null && !VALID_CHARSET_ENCODER.canEncode(ldapUser.department)){
-            logger.warn(String.format("User[%s] has character encoding issue for department='%s'", ldapUser.accountName, ldapUser.department));
+            logger.warn("User[%s] has character encoding issue for department='%s'".formatted(ldapUser.accountName, ldapUser.department));
             return false;
         }
 
         if (ldapUser.memberOf != null) {
             for (String group : ldapUser.memberOf) {
                 if (!VALID_CHARSET_ENCODER.canEncode(group)) {
-                    logger.warn(String.format("User[%s] has character encoding issue for memberOf.group='%s'", ldapUser.accountName, group));
+                    logger.warn("User[%s] has character encoding issue for memberOf.group='%s'".formatted(ldapUser.accountName, group));
                     return false;
                 }
             }
