@@ -188,9 +188,9 @@ public final class MarshallingSupport {
         } else if (value instanceof Map) {
             out.writeByte(MAP_TYPE);
             marshalPrimitiveMap((Map<String, Object>)value, out);
-        } else if (value instanceof List) {
+        } else if (value instanceof List list) {
             out.writeByte(LIST_TYPE);
-            marshalPrimitiveList((List<Object>)value, out);
+            marshalPrimitiveList(list, out);
         } else {
             throw new IOException("Object is not a primitive: " + value);
         }
@@ -223,10 +223,10 @@ public final class MarshallingSupport {
                 value = Long.valueOf(in.readLong());
                 break;
             case FLOAT_TYPE:
-                value = new Float(in.readFloat());
+                value = Float.valueOf(in.readFloat());
                 break;
             case DOUBLE_TYPE:
-                value = new Double(in.readDouble());
+                value = Double.valueOf(in.readDouble());
                 break;
             case BYTE_ARRAY_TYPE:
                 value = new byte[in.readInt()];
