@@ -207,7 +207,7 @@ public class HibernateSystemEventDao extends HibernateDaoSupport implements Syst
                 {
                     return rowCountList.get(0);
                 }
-                return new Long(0);
+                return Long.valueOf(0);
             }
 
             /**
@@ -403,14 +403,14 @@ public class HibernateSystemEventDao extends HibernateDaoSupport implements Syst
 
             Query<Long> query = session.createQuery(criteriaQuery);
             List<Long> rowCountList = query.getResultList();
-            Long rowCount = new Long(0);
+            Long rowCount = Long.valueOf(0);
             if ( !rowCountList.isEmpty() )
             {
                 rowCount = rowCountList.get(0);
             }
 
             logger.debug(rowCount + ", SystemEvent housekeepables exist");
-            return new Boolean(rowCount > 0);
+            return Boolean.valueOf(rowCount > 0);
 
         });
 
