@@ -287,7 +287,7 @@ public class HibernateWiretapDao extends HibernateDaoSupport implements WiretapD
                 {
                     return rowCountList.get(0);
                 }
-                return new Long(0);
+                return Long.valueOf(0);
             }
 
             /**
@@ -352,8 +352,8 @@ public class HibernateWiretapDao extends HibernateDaoSupport implements WiretapD
         // can have a restriction applied
         if (restrictionValue != null )
         {
-            if(restrictionValue instanceof Collection){
-                if (!((Collection)restrictionValue).isEmpty())
+            if(restrictionValue instanceof Collection collection){
+                if (!collection.isEmpty())
                     return true;
             }else{
 
@@ -447,14 +447,14 @@ public class HibernateWiretapDao extends HibernateDaoSupport implements WiretapD
 
             Query<Long> query = session.createQuery(criteriaQuery);
             List<Long> rowCountList = query.getResultList();
-            Long rowCount = new Long(0);
+            Long rowCount = Long.valueOf(0);
             if (!rowCountList.isEmpty())
             {
                 rowCount = rowCountList.get(0);
             }
 
             logger.debug(rowCount+", Wiretap housekeepables exist");
-            return new Boolean(rowCount>0);
+            return Boolean.valueOf(rowCount > 0);
         });
     }
 
